# trash-music

./: .gitignore  README.md  flake.nix  package.json
nix/: home-manager.nix
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/injected/: bootstrap.js
src-tauri/src/: lib.rs  main.rs  plugin_manager.rs
